[gd_scene load_steps=3 format=3 uid="uid://b3scyoacw4tj2"]

[ext_resource type="Script" uid="uid://cjuhbtrdta537" path="res://Script/upgrade_card.gd" id="1_bwnvn"]
[ext_resource type="Theme" uid="uid://6f8elyrn1fl4" path="res://Theme/card_theme.tres" id="2_gib8g"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_gib8g")
script = ExtResource("1_bwnvn")

[node name="Card" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -156.0
offset_right = 128.0
offset_bottom = 156.0
grow_horizontal = 2
grow_vertical = 2

[node name="Upgrade_name" type="Label" parent="Card"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -70.5
offset_right = 70.5
offset_bottom = 43.0
grow_horizontal = 2
text = "Upgrade"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label_description" type="Label" parent="Card"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -74.0
offset_top = 43.0
offset_right = 75.0
offset_bottom = 66.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 12
text = "Description"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Upgrade_description" type="RichTextLabel" parent="Card"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -104.0
offset_top = -230.0
offset_right = 102.0
offset_bottom = -68.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="Cost_label" type="Label" parent="Card"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -85.0
offset_top = -71.0
offset_right = -11.0
offset_bottom = -12.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 12
text = "Cost
100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Current_level" type="Label" parent="Card"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -37.0
offset_top = -71.0
offset_right = 37.0
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="galaxium_consumption" type="Label" parent="Card"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 6.0
offset_top = -71.0
offset_right = 80.0
offset_bottom = -12.0
grow_vertical = 0
theme_override_font_sizes/font_size = 12
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="gui_input" from="Card" to="." method="_on_gui_input"]
